unpackaged/main/default/objects/Further_Information__c/Further_Information__c.object-meta.xml
<CustomObject>
    <label>Further Information</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Further Information No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Further Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>