unpackaged/main/default/objects/Further_Information__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APY Lands (Pending Relocation)</fullName>
            </value>
            <value>
                <fullName>BHFLHN</fullName>
            </value>
            <value>
                <fullName>CHSALHN</fullName>
            </value>
            <value>
                <fullName>CALHN</fullName>
            </value>
            <value>
                <fullName>DASSA</fullName>
            </value>
            <value>
                <fullName>EFNLHN</fullName>
            </value>
            <value>
                <fullName>FUNLHN</fullName>
            </value>
            <value>
                <fullName>GP CLINIC</fullName>
            </value>
            <value>
                <fullName>Dept. of Human Services</fullName>
            </value>
            <value>
                <fullName>LCLHN</fullName>
            </value>
            <value>
                <fullName>NGO</fullName>
            </value>
            <value>
                <fullName>NALHN</fullName>
            </value>
            <value>
                <fullName>PRIVATE HOSPITALS</fullName>
            </value>
            <value>
                <fullName>PRISONS</fullName>
            </value>
            <value>
                <fullName>RAMSAY</fullName>
            </value>
            <value>
                <fullName>RMCLHN</fullName>
            </value>
            <value>
                <fullName>SACAT</fullName>
            </value>
            <value>
                <fullName>SA Health</fullName>
            </value>
            <value>
                <fullName>SALHN</fullName>
            </value>
            <value>
                <fullName>WCHN</fullName>
            </value>
            <value>
                <fullName>Y&amp;NLHN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>