unpackaged/main/default/objects/Further_Information__c/fields/Client_No__c.field-meta.xml
<CustomField>
    <fullName>Client_No__c</fullName>
    <formula>Client__r.Client_No__c</formula>
    <label>Client No</label>
    <type>Text</type>
</CustomField>