unpackaged/main/default/objects/Further_Information__c/fields/Compliant_Revocation__c.field-meta.xml
<CustomField>
    <fullName>Compliant_Revocation__c</fullName>
    <label>Compliant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>