unpackaged/main/default/objects/Further_Information__c/fields/Date_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Entered</label>
    <type>Date</type>
</CustomField>