unpackaged/main/default/objects/Further_Information__c/fields/Date_Entered_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Confirmation__c</fullName>
    <label>Date Entered</label>
    <type>Date</type>
</CustomField>