unpackaged/main/default/objects/Further_Information__c/fields/Date_of_Compliance_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Compliance_Confirmation__c</fullName>
    <label>Date of Compliance</label>
    <type>Date</type>
</CustomField>