unpackaged/main/default/objects/Further_Information__c/fields/Examination_Date_Time_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Examination_Date_Time_Confirmation__c</fullName>
    <label>Examination Date/Time</label>
    <type>DateTime</type>
</CustomField>