unpackaged/main/default/objects/Further_Information__c/fields/Facility_Service__c.field-meta.xml
<CustomField>
    <fullName>Facility_Service__c</fullName>
    <label>Facility / Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AP Indulkana</fullName>
            </value>
            <value>
                <fullName>AP Pukatja</fullName>
            </value>
            <value>
                <fullName>BH Angaston</fullName>
            </value>
            <value>
                <fullName>BH Eudunda</fullName>
            </value>
            <value>
                <fullName>BH Gawler</fullName>
            </value>
            <value>
                <fullName>BH Glenside R&amp;R</fullName>
            </value>
            <value>
                <fullName>BH Gumeracha</fullName>
            </value>
            <value>
                <fullName>BH Kangaroo Island</fullName>
            </value>
            <value>
                <fullName>BH Kapunda</fullName>
            </value>
            <value>
                <fullName>BH Mt Barker</fullName>
            </value>
            <value>
                <fullName>BH Mt Pleasant</fullName>
            </value>
            <value>
                <fullName>BH Sth Coast District</fullName>
            </value>
            <value>
                <fullName>BH Strathalbyn</fullName>
            </value>
            <value>
                <fullName>BH Tanunda</fullName>
            </value>
            <value>
                <fullName>CH Country Health</fullName>
            </value>
            <value>
                <fullName>CN ECMHS</fullName>
            </value>
            <value>
                <fullName>CN EOPMHS</fullName>
            </value>
            <value>
                <fullName>CN Glenside</fullName>
            </value>
            <value>
                <fullName>CN RAH</fullName>
            </value>
            <value>
                <fullName>CN TQED</fullName>
            </value>
            <value>
                <fullName>CN TQEH</fullName>
            </value>
            <value>
                <fullName>CN WCMHS</fullName>
            </value>
            <value>
                <fullName>CN WICC</fullName>
            </value>
            <value>
                <fullName>CN WOPMHS</fullName>
            </value>
            <value>
                <fullName>DA DASSA</fullName>
            </value>
            <value>
                <fullName>EF Ceduna</fullName>
            </value>
            <value>
                <fullName>EF Cleve</fullName>
            </value>
            <value>
                <fullName>EF Coober Pedy</fullName>
            </value>
            <value>
                <fullName>EF Cowell</fullName>
            </value>
            <value>
                <fullName>EF Cummins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>