unpackaged/main/default/objects/Further_Information__c/fields/Facility_Service_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Facility_Service_Confirmation__c</fullName>
    <label>Facility / Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RA Adelaide Clinic</fullName>
            </value>
            <value>
                <fullName>BH Angaston</fullName>
            </value>
            <value>
                <fullName>YN Balaklava</fullName>
            </value>
            <value>
                <fullName>LC Bordertown</fullName>
            </value>
            <value>
                <fullName>YN Burra</fullName>
            </value>
            <value>
                <fullName>EF Ceduna</fullName>
            </value>
            <value>
                <fullName>YN Clare</fullName>
            </value>
            <value>
                <fullName>CH Country Health</fullName>
            </value>
            <value>
                <fullName>CN ECMHS</fullName>
            </value>
            <value>
                <fullName>NO FCMHS</fullName>
            </value>
            <value>
                <fullName>FU Oodnadatta Health Services</fullName>
            </value>
            <value>
                <fullName>YN Orroroo</fullName>
            </value>
            <value>
                <fullName>LC Penola</fullName>
            </value>
            <value>
                <fullName>RM Pinnaroo</fullName>
            </value>
            <value>
                <fullName>YN Port Broughton</fullName>
            </value>
            <value>
                <fullName>YN Port Pirie</fullName>
            </value>
            <value>
                <fullName>FU Quorn</fullName>
            </value>
            <value>
                <fullName>RM Renmark</fullName>
            </value>
            <value>
                <fullName>YN Riverton</fullName>
            </value>
            <value>
                <fullName>FU Roxby Downs</fullName>
            </value>
            <value>
                <fullName>SO FMC</fullName>
            </value>
            <value>
                <fullName>YN Snowtown</fullName>
            </value>
            <value>
                <fullName>YN Southern Yorke</fullName>
            </value>
            <value>
                <fullName>BH Strathalbyn</fullName>
            </value>
            <value>
                <fullName>EF Streaky Bay</fullName>
            </value>
            <value>
                <fullName>EF Tumby Bay</fullName>
            </value>
            <value>
                <fullName>RM Waikerie</fullName>
            </value>
            <value>
                <fullName>FU Woomera Hospital</fullName>
            </value>
            <value>
                <fullName>EF Wudinna</fullName>
            </value>
            <value>
                <fullName>AP Pukatja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>