unpackaged/main/default/objects/Further_Information__c/fields/Health_Professional_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Health_Professional_Confirmation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health Professional</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Further Informations (Health Professional)</relationshipLabel>
    <relationshipName>Further_Informations2</relationshipName>
    <type>Lookup</type>
</CustomField>