unpackaged/main/default/objects/Further_Information__c/fields/Location_of_Examination__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Examination__c</fullName>
    <label>Location of Examination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>