unpackaged/main/default/objects/Further_Information__c/fields/Location_of_Exmanination_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Exmanination_Confirmation__c</fullName>
    <label>Location of Exmanination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>