unpackaged/main/default/objects/Further_Information__c/fields/Order_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Expiry_Date__c</fullName>
    <label>Order Expiry Date</label>
    <type>Date</type>
</CustomField>