unpackaged/main/default/objects/Further_Information__c/fields/Order_Initially_Made_On_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Order_Initially_Made_On_Confirmation__c</fullName>
    <label>Order Initially Made On</label>
    <type>Date</type>
</CustomField>