unpackaged/main/default/objects/Further_Information__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Order No</label>
    <type>AutoNumber</type>
</CustomField>