unpackaged/main/default/objects/Further_Information__c/fields/Reason_for_NonCompliance_Update__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_NonCompliance_Update__c</fullName>
    <label>Reason for Non-Compliance Update</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>