unpackaged/main/default/objects/Further_Information__c/fields/Review_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Review_DateTime__c</fullName>
    <label>Review Date/Time</label>
    <type>DateTime</type>
</CustomField>