unpackaged/main/default/objects/Further_Information__c/fields/Revoked_Date__c.field-meta.xml
<CustomField>
    <fullName>Revoked_Date__c</fullName>
    <label>Revoked Date</label>
    <type>Date</type>
</CustomField>