unpackaged/main/default/objects/Further_Information__c/fields/Type_of_the_Health_Professional__c.field-meta.xml
<CustomField>
    <fullName>Type_of_the_Health_Professional__c</fullName>
    <label>Type of the Health Professional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Psychiatrist</fullName>
            </value>
            <value>
                <fullName>Authorised MP</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Authorised Health Professional</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>