unpackaged/main/default/objects/Further_Information__c/fields/Variation__c.field-meta.xml
<CustomField>
    <fullName>Variation__c</fullName>
    <label>Variation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>