unpackaged/main/default/objects/Further_Information__c/recordTypes/Community_Treatment_Order_Level_1.recordType-meta.xml
<RecordType>
    <fullName>Community_Treatment_Order_Level_1</fullName>
    <active>true</active>
    <label>Community Treatment Order Level 1</label>
</RecordType>