unpackaged/main/default/objects/Further_Information__c/validationRules/Date_Entered_Make_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Entered_Make_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Community_Treatment_Order_Level_1&#39;,
NOT(ISBLANK(Date_Entered__c)) ,
OR(Date_Entered__c&gt; TODAY(),
			Date_Entered__c &lt;  Commencement_Date__c )
)</errorConditionFormula>
    <errorMessage>Date Entered of Make Order should be less than future date and greater than Commencement Date.</errorMessage>
</ValidationRule>