unpackaged/main/default/objects/Further_Information__c/validationRules/Order_Expiry_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Expiry_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(RecordType.DeveloperName == &#39;Community_Treatment_Order_Level_1&#39; &amp;&amp;
			((5 * FLOOR( ( Order_Expiry_Date__c - DATE( 1900, 1, 8) ) / 7 )  
+ MIN( 5, MOD(Order_Expiry_Date__c - DATE( 1900, 1, 8), 7 ) )
)
-
(5 * FLOOR( ( Date_Entered__c - DATE( 1900, 1, 8) ) / 7 )
+ MIN( 5, MOD( Date_Entered__c - DATE( 1900, 1, 8), 7 ) )
))+1 &gt; 42,true,false)</errorConditionFormula>
    <errorDisplayField>Order_Expiry_Date__c</errorDisplayField>
    <errorMessage>Please enter a valid date. Order Expired date can not be more than 42 days from the order entered date</errorMessage>
</ValidationRule>